--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "./recipes/lasagna.html" rel = "noopener noreferrer">Lasagna</a>
+        <ul>
+            <li><a href = "./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href = "./recipes/ratatouille.html">Ratatouille</a></li>
+            <li><a href = "./recipes/tomatosoup.html">Tomato Soup</a></li>
+        </ul>
     </body>
 </html>
