--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset = "UTF-8">
         <title>Recipes</title>
+        <link rel = "stylesheet" href = "style.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class = "recipes">
             <li><a href = "./recipes/lasagna.html">Lasagna</a></li>
             <li><a href = "./recipes/ratatouille.html">Ratatouille</a></li>
             <li><a href = "./recipes/tomatosoup.html">Tomato Soup</a></li>
